Replace explicity free transfer with empty list